VOA-3592 Upgrade AutoBARS backend libraries and plugins